--- a/Views/App/Shop.cshtml
+++ b/Views/App/Shop.cshtml
@@ -1,12 +1,19 @@
 ﻿@model IEnumerable<Product>
 
 @section Scripts {
-	<script src="~/ts/shopper.js"></script>
-	<script src="~/ts/main.js"></script>
+	<script src="~/client/vendor.js"></script>
+	<script src="~/client/polyfills.js"></script>
+	<script src="~/client/runtime.js"></script>
+	<script src="~/client/main.js" asp-append-version="true"></script>
+}
+@section head {
+		<link href="~/client/styles.css" rel="stylesheet"/>
 
 }
 
-<h1>Shop</h1>
+<the-shop></the-shop>
+
+@*<h1>Shop</h1>
 <p>Count: @Model.Count()</p>
 <div class="row">
 @foreach (var p in Model)
@@ -26,4 +33,4 @@
 		</div>
 </div>
 }
-</div>
+</div>*@
